--- a/feature_eng(martin).ipynb
+++ b/feature_eng(martin).ipynb
@@ -824,33 +824,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n",
-      "1\n",
-      "TOTO\n"
+     "ename": "NameError",
+     "evalue": "name 'df_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf_train\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprice_elec\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m unique_date \u001b[38;5;129;01min\u001b[39;00m df_train[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatetime\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39munique()[:\u001b[38;5;241m10\u001b[39m]:\n\u001b[1;32m      4\u001b[0m   \u001b[38;5;66;03m# Récuperer le prix de l'electricite a ce jour la\u001b[39;00m\n\u001b[1;32m      5\u001b[0m   df_elec_filtered \u001b[38;5;241m=\u001b[39m df_electricity[df_electricity[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morigin_date\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m unique_date]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_train' is not defined"
      ]
     }
    ],
@@ -1187,10 +1172,7 @@
      ]
     }
    ],
-   "source": [
-    "# df_train[\"euros_per_mwh\"] = \n",
-    "df_train.apply(lambda x : df_electricity[df_electricity[\"origin_date\"] == x[\"datetime\"]].values, axis = 1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1216,7 +1198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
